Code uploaded from Local host

--- a/index.html
+++ b/index.html
@@ -1,3 +1,65 @@
-<html>
-<p>This is my Portfolio Front Page.</p>
+<!--PORTFOLIO PAGE - Black on White - HTML-->
+<!DOCTYPE html>
+<head>
+    <title>Janine Fernandez Portfolio 2018</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+
+    <!--Stylesheet-->
+    <link href="css/reset.css" type="text/css" rel="stylesheet">
+    <link href="css/portfolio_bow.css" type="text/css" rel="stylesheet">
+
+    <!--Responsive Stylesheet-->
+</head>
+<body>
+<div class = "my_background"></div>
+<div class = "wrapper_body">
+<div id="bodywrapper">
+    <!--GRID CONTAINER-->
+    <div class = "gridwrapper">
+        <div class="box header_welcome">welcome       
+            </div>
+        <div class="box header_pagename">
+            <p>Janine B. Fernandez | <img src="images/j.ix-logo.png" alt="Janine Fernandez Logo"> | Porfolio</p>
+            <!--Social media accounts-->
+            <div class = "socialmedia">
+                <a href="https://www.linkedin.com/in/janinebfernandez" target = "_blank"><img src="images/linkedin-icon.png" alt="LinkedIn"></a>
+                <a href="https://www.instagram.com/j.ix_redefine9" target = "_blank"><img src="images/instagram-icon.png" alt="Instagram"></a>
+            </div>
+        </div>
+        </div><!--gridwrapper_content ends-->
+            <div class = "gridwrapper_content">
+                <div class="box mylogo">
+                    <p id = "logo_image">
+                        <img src="images/j.ix-logo.png" alt="Janine Fernandez Logo">
+                    </p> 
+                    </div>
+                <div class = "gridwrapper_info">
+                    <div class="box mytitle">designer & developer
+                        </div>
+                    <div class="box myname">Janine B. Fernandez
+                        </div>
+                    <div class="box aboutme">About Me
+                        </div>
+                    <div class="box contact">Say Hello
+                        </div>
+                </div><!--gridwrapper_info ends-->
+    </div><!--gridwrapper ends-->
+</div><!--bodywrapper ends-->
+<div class="box nav">
+    <ul>
+        <li id = "video"></li>
+        <li id = "photo">Photography</li>
+        <li id = "uxui">UX/UI</li>
+        <li id = "wd">Web Design</li>
+        <li id = "projects"></li>
+        <li id = "logo"></li>
+        <li id = "type"></li>
+        <li id = "animate"></li>
+        <li id = "sound"></li>
+    </ul>
+    </div>
+</div><!--wrapper_body ENDS-->
+</body>
+
 </html>
