--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="box header_welcome">welcome       
             </div>
         <div class="box header_pagename">
-            <p>Janine B. Fernandez | <img src="images/j.ix-logo.png" alt="Janine Fernandez Logo"> | Porfolio</p>
+            <a href="janinebfernandez.github.io/Portfolio"><p>Janine B. Fernandez | <img src="images/j.ix-logo.png" alt="Janine Fernandez Logo"> | Porfolio</p></a>
             <!--Social media accounts-->
             <div class = "socialmedia">
                 <a href="https://www.linkedin.com/in/janinebfernandez" target = "_blank"><img src="images/linkedin-icon.png" alt="LinkedIn"></a>
@@ -39,24 +39,24 @@
                         </div>
                     <div class="box myname">Janine B. Fernandez
                         </div>
-                    <div class="box aboutme">About Me
-                        </div>
-                    <div class="box contact">Say Hello
-                        </div>
+                    <a href="url"><div class="box aboutme">About Me
+                        </div></a>
+                    <a href="url"><div class="box contact">Say Hello
+                        </div></a>
                 </div><!--gridwrapper_info ends-->
     </div><!--gridwrapper ends-->
 </div><!--bodywrapper ends-->
 <div class="box nav">
     <ul>
-        <li id = "video"></li>
-        <li id = "photo">Photography</li>
-        <li id = "uxui">UX/UI</li>
-        <li id = "wd">Web Design</li>
-        <li id = "projects"></li>
-        <li id = "logo"></li>
-        <li id = "type"></li>
-        <li id = "animate"></li>
-        <li id = "sound"></li>
+        <a href="url"><li id = "video"></li></a>
+        <a href="url"><li id = "photo">Photography</li></a>
+        <a href="url"><li id = "uxui">UX/UI</li></a>
+        <a href="url"><li id = "wd">Web Design</li></a>
+        <a href="url"><li id = "projects"></li></a>
+        <a href="url"><li id = "logo"></li></a>
+        <a href="url"><li id = "type"></li></a>
+        <a href="url"><li id = "animate"></li></a>
+        <a href="url"><li id = "sound"></li></a>
     </ul>
     </div>
 </div><!--wrapper_body ENDS-->
