--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <!--Stylesheet-->
     <link href="css/reset.css" type="text/css" rel="stylesheet">
     <link href="css/portfolio_bow.css" type="text/css" rel="stylesheet">
+    <link href="css/portfolio_bow_tip.css" type="text/css" rel="stylesheet">
+    <link href="css/portfolio_bow_til.css" type="text/css" rel="stylesheet">
+    <link href="css/portfolio_bow_ml.css" type="text/css" rel="stylesheet">
+    <link href="css/portfolio_bow_mp.css" type="text/css" rel="stylesheet">
 
     <!--Responsive Stylesheet-->
 </head>
