--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
 </div><!--bodywrapper ends-->
 <div class="box nav">
     <ul>
-        <a href="url"><li id = "video"></li></a>
-        <a href="url"><li id = "photo">Photography</li></a>
-        <a href="url"><li id = "uxui">UX/UI</li></a>
-        <a href="url"><li id = "wd">Web Design</li></a>
-        <a href="url"><li id = "projects"></li></a>
-        <a href="url"><li id = "logo"></li></a>
-        <a href="url"><li id = "type"></li></a>
-        <a href="url"><li id = "animate"></li></a>
-        <a href="url"><li id = "sound"></li></a>
+        <li id = "video"><a href="url"></a></li>
+        <li id = "photo"><a href="url">Photography</a></li>
+        <li id = "uxui"><a href="url">UX/UI</a></li>
+        <li id = "wd"><a href="url">Web Design</a></li>
+        <li id = "projects"><a href="url"></a></li>
+        <li id = "logo"><a href="url"></a></li>
+        <li id = "type"><a href="url"></a></li>
+        <li id = "animate"><a href="url"></a></li>
+        <li id = "sound"><a href="url"></a></li>
     </ul>
     </div>
 </div><!--wrapper_body ENDS-->
