--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </div><!--gridwrapper ends-->
 </div><!--bodywrapper ends-->
 <div class="box nav dropdown">
-    <button onclick="myFunction()" class="dropbtn"><i class="fa fa-bars"></i></button>
+    <button onclick="myFunction()"><i class="fa fa-bars dropbtn"></i></button>
     <div id="myDropdown" class="dropdown-content">
         <li id = "video"><a href="url">Video</a></li>
         <li id = "photo"><a href="url">Photography</a></li>
