--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
 
-        <!--Javascript-->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="js/toggle.js"></script>
-        <script src="js/nav_dropdown.js"></script>
+    <!--Javascript-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="js/toggle.js"></script>
+    <script src="js/nav_dropdown.js"></script>
         
     <!--Stylesheet-->
     <link href="css/reset.css" type="text/css" rel="stylesheet">
@@ -29,17 +29,17 @@
 <div id="bodywrapper">
     <!--GRID CONTAINER-->
     <div class = "gridwrapper">
-        <div class="box header_welcome">welcome       
-            </div>
+        <div class="box header_welcome">welcome</div>
         <div class="box header_pagename">
             <a href="janinebfernandez.github.io/Portfolio"><p>Janine B. Fernandez | <img src="images/j.ix-logo.png" alt="Janine Fernandez Logo"> | Porfolio</p></a>
             <!--Social media accounts-->
             <div class = "socialmedia">
                 <a href="https://www.linkedin.com/in/janinebfernandez" target = "_blank"><img src="images/linkedin-icon.png" alt="LinkedIn"></a>
                 <a href="https://www.instagram.com/j.ix_redefine9" target = "_blank"><img src="images/instagram-icon.png" alt="Instagram"></a>
+                <a href="https://www.flickr.com/photos/janinebfernandez/" target = "_blank"><img src="images/instagram-icon.png" alt="Flickr"></a>
             </div>
         </div>
-        </div><!--gridwrapper_content ends-->
+        </div><!--gridwrapper ends-->
 
             <div class = "gridwrapper_content">
                 <div class="box mylogo">
@@ -86,10 +86,10 @@
         <button onclick="myFunction()"><i class="fa fa-bars dropbtn"></i></button>
         <div id="myDropdown" class="dropdown-content">
             <li id = "video"><!--<a href="url">Video</a>--></li>
-            <li id = "photo"><a href="url">Photography</a></li>
-            <li id = "uxui"><a href="url">UX/UI</a></li>
-            <li id = "wd"><a href="url">Web Design</a></li>
-            <li id = "projects"><a href="url">Projects</a></li>
+            <li id = "photo"><a href="pages/photography.html">Photography</a></li>
+            <li id = "uxui"><a href="pages/uxui.html">UX/UI</a></li>
+            <li id = "wd"><a href="pages/webdesign.html">Web Design</a></li>
+            <li id = "projects"><a href="projects.html">Projects</a></li>
             <li id = "logo"><!--<a href="url">Logo</a>--></li>
             <li id = "type"><!--<a href="url">Type</a>--></li>
             <li id = "animate"><!--<a href="url">Animate</a>--></li>
