--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class = "socialmedia">
                 <a href="https://www.linkedin.com/in/janinebfernandez" target = "_blank"><img src="images/linkedin-icon.png" alt="LinkedIn"></a>
                 <a href="https://www.instagram.com/j.ix_redefine9" target = "_blank"><img src="images/instagram-icon.png" alt="Instagram"></a>
-                <a href="https://www.flickr.com/photos/janinebfernandez/" target = "_blank"><img src="images/instagram-icon.png" alt="Flickr"></a>
+                <a href="https://www.flickr.com/photos/janinebfernandez/" target = "_blank"><img src="images/flickr-icon.png" alt="Flickr"></a>
             </div>
         </div>
         </div><!--gridwrapper ends-->
