--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <!--Social media accounts-->
             <div class = "socialmedia">
                 <a href="https://www.linkedin.com/in/janinebfernandez" target = "_blank"><img src="images/linkedin-icon.png" alt="LinkedIn"></a>
+                <a href="https://www.youtube.com/channel/UCWjmkdK2poOYL6IYrYUskwQ/featured?disable_polymer=1" target = "_blank"><img src="images/youtube-icon.png" alt="Flickr"></a>
                 <a href="https://www.instagram.com/j.ix_redefine9" target = "_blank"><img src="images/instagram-icon.png" alt="Instagram"></a>
                 <a href="https://www.flickr.com/photos/janinebfernandez/" target = "_blank"><img src="images/flickr-icon.png" alt="Flickr"></a>
             </div>
