--- a/index.html
+++ b/index.html
@@ -65,16 +65,25 @@
 <div id="aboutme_des">
         <p id="header_contact">ABOUT ME</p>
         <p id="aboutme_content">
-            <br>Janine B. Fernandez
-            <br>Resume
-            <br>San Diego State University
-            <br>Multimedia & Computer Science
+            <br>Learning is never ending. Once you put your heart into it, anything can be accomplished. 
+            <br>Always be passionate about what you love doing. Learn during the process and progress with time.
+            <br>
+            <br>
+            <br>
+            <br><a href="https://www.dropbox.com/s/chrbln27o153d5o/Janine_Fernandez_Resume_112918.pdf?dl=0" target="_blank" style="font-weight:bold;">RESUME</a>
         </p>
         <p id="close_about">X</p>
 </div>
 <div id="contactme_des">
         <p id="header_contact">CONTACT ME</p>
-        <p id="contactme_content">janinebfernandez@gmail.com</p>
+        <p id="contactme_content">
+            <br>janinebfernandez@gmail.com
+            <br>
+            <br>
+            <br>
+            <br><a href="https://www.linkedin.com/in/janinebfernandez" target="_blank" style="font-weight:bold;">LinkedIn</a>
+
+        </p>
         <p id="close_contact">X</p>
 </div>
 <!--ABOUT ME & SAY HELLO ENDS-->
@@ -88,9 +97,9 @@
         <div id="myDropdown" class="dropdown-content">
             <li id = "video"><!--<a href="url">Video</a>--></li>
             <li id = "photo"><a href="pages/photography.html">Photography</a></li>
-            <li id = "uxui"><a href="pages/uxui.html">UX/UI</a></li>
-            <li id = "wd"><a href="pages/webdesign.html">Web Design</a></li>
-            <li id = "projects"><a href="projects.html">Projects</a></li>
+            <li id = "uxui"><!--<a href="pages/uxui.html">UX/UI</a>--></li>
+            <li id = "wd"><!--<a href="pages/webdesign.html">Web Design</a>--></li>
+            <li id = "projects"><!--<a href="projects.html">Projects</a>--></li>
             <li id = "logo"><!--<a href="url">Logo</a>--></li>
             <li id = "type"><!--<a href="url">Type</a>--></li>
             <li id = "animate"><!--<a href="url">Animate</a>--></li>
