--- a/pages/photography.html
+++ b/pages/photography.html
@@ -49,31 +49,31 @@
         <img src="https://farm5.staticflickr.com/4846/31850406848_a613e5615f_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
     </div>
     <div class="column">
-        <img src="https://farm5.staticflickr.com/4803/31850428788_0767f7ecf2_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+        <img src="https://farm5.staticflickr.com/4803/31850428788_0767f7ecf2_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(2)" class="hover-shadow cursor">
     </div>
     <div class="column">
-        <img src="https://farm2.staticflickr.com/1909/45671424462_d6175a844e_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+        <img src="https://farm2.staticflickr.com/1909/45671424462_d6175a844e_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(3)" class="hover-shadow cursor">
     </div>
     <div class="column">
-        <img src="https://farm2.staticflickr.com/1971/31850376608_dfb41f7a7e_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+        <img src="https://farm2.staticflickr.com/1971/31850376608_dfb41f7a7e_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
     </div>
     <div class="column">
-        <img src="https://farm2.staticflickr.com/1966/45721911251_bf254dc6c4_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+        <img src="https://farm2.staticflickr.com/1966/45721911251_bf254dc6c4_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(5)" class="hover-shadow cursor">
     </div>
     <div class="column">
-        <img src="https://farm5.staticflickr.com/4813/45722139761_a5c9586623_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+        <img src="https://farm5.staticflickr.com/4813/45722139761_a5c9586623_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(6)" class="hover-shadow cursor">
+    </div>
+    <!--<div class="column">
+        <img src="https://farm5.staticflickr.com/4813/45722139761_a5c9586623_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(7)" class="hover-shadow cursor">
+    </div>-->
+    <div class="column">
+        <img src="https://farm5.staticflickr.com/4853/44997209154_d0abb0ed2f_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(8)" class="hover-shadow cursor">
     </div>
     <div class="column">
-        <img src="https://farm5.staticflickr.com/4813/45722139761_a5c9586623_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+        <img src="https://farm5.staticflickr.com/4815/31850480948_0baa8037c6_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(9)" class="hover-shadow cursor">
     </div>
     <div class="column">
-        <img src="https://farm5.staticflickr.com/4853/44997209154_d0abb0ed2f_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(2)" class="hover-shadow cursor">
-    </div>
-    <div class="column">
-        <img src="https://farm5.staticflickr.com/4815/31850480948_0baa8037c6_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(3)" class="hover-shadow cursor">
-    </div>
-    <div class="column">
-        <img src="https://farm2.staticflickr.com/1969/44807998995_b378d1db08_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
+        <img src="https://farm2.staticflickr.com/1969/44807998995_b378d1db08_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(10)" class="hover-shadow cursor">
     </div>
 </div>
 
@@ -87,8 +87,8 @@
     </div>
 
     <div class="mySlides">
-            <div class="numbertext">Pavillion</div>
-            <img src="https://farm5.staticflickr.com/4803/31850428788_307982a4f5_o_d.jpg" style="width:100%">
+        <div class="numbertext">Pavillion</div>
+        <img src="https://farm5.staticflickr.com/4803/31850428788_307982a4f5_o_d.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
@@ -97,8 +97,8 @@
     </div>
 
     <div class="mySlides">
-            <div class="numbertext">Shelter Island 1</div>
-            <img src="https://farm2.staticflickr.com/1971/31850376608_9a389154c3_o_d.jpg" style="width:100%">
+        <div class="numbertext">Shelter Island 1</div>
+        <img src="https://farm2.staticflickr.com/1971/31850376608_9a389154c3_o_d.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
@@ -107,20 +107,16 @@
     </div>
 
     <div class="mySlides">
-            <div class="numbertext">Into the City</div>
-            <img src="https://farm5.staticflickr.com/4813/45722139761_8f50298324_o_d.jpg" style="width:100%">
+        <div class="numbertext">Into the City</div>
+        <img src="https://farm5.staticflickr.com/4813/45722139761_8f50298324_o_d.jpg" style="width:100%">
     </div>
 
+    <!--
     <div class="mySlides">
             <div class="numbertext">Into the City</div>
             <img src="https://farm5.staticflickr.com/4813/45722139761_8f50298324_o_d.jpg" style="width:100%">
     </div>
-
-    <div class="mySlides">
-      <div class="numbertext">Into the City</div>
-      <img src="https://farm5.staticflickr.com/4813/45722139761_8f50298324_o_d.jpg" style="width:100%">
-    </div>
-
+-->
     <div class="mySlides">
       <div class="numbertext">Balboa Night</div>
       <img src="https://farm5.staticflickr.com/4853/44997209154_7252ff3c38_o_d.jpg" style="width:100%">
@@ -154,9 +150,9 @@
         <div id="myDropdown" class="dropdown-content">
             <li id = "video"><!--<a href="url">Video</a>--></li>
             <li id = "photo"><a href="photography.html">Photography</a></li>
-            <li id = "uxui"><a href="uxui.html">UX/UI</a></li>
-            <li id = "wd"><a href="webdesign.html">Web Design</a></li>
-            <li id = "projects"><a href="projects.html">Projects</a></li>
+            <li id = "uxui"><!--<a href="uxui.html">UX/UI</a>--></li>
+            <li id = "wd"><!--<a href="webdesign.html">Web Design</a>--></li>
+            <li id = "projects"><!--<a href="projects.html">Projects</a>--></li>
             <li id = "logo"><!--<a href="url">Logo</a>--></li>
             <li id = "type"><!--<a href="url">Type</a>--></li>
             <li id = "animate"><!--<a href="url">Animate</a>--></li>
