--- a/pages/projects.html
+++ b/pages/projects.html
@@ -55,7 +55,7 @@
             <li id = "video"><!--<a href="url">Video</a>--></li>
             <li id = "photo"><a href="photography.html">Photography</a></li>
             <li id = "uxui"><a href="uxui.html">UX/UI</a></li>
-            <li id = "wd"><a href="webdeisng.html">Web Design</a></li>
+            <li id = "wd"><a href="webdesign.html">Web Design</a></li>
             <li id = "projects"><a href="projects.html">Projects</a></li>
             <li id = "logo"><!--<a href="url">Logo</a>--></li>
             <li id = "type"><!--<a href="url">Type</a>--></li>
