--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class = "gridwrapper">
         <div class="box header_welcome">welcome</div>
         <div class="box header_pagename">
-            <a href="https://janinebfernandez.github.io/Portfolio/index.html"><p>Janine B. Fernandez | <img src="images/j.ix-logo.png" alt="Janine Fernandez Logo"> | Porfolio</p></a>
+            <a href="#"><p>Janine B. Fernandez | <img src="images/j.ix-logo.png" alt="Janine Fernandez Logo"> | Porfolio</p></a>
             <!--Social media accounts-->
             <div class = "socialmedia">
                 <a href="https://www.linkedin.com/in/janinebfernandez" target = "_blank"><img src="images/linkedin-icon.png" alt="LinkedIn"></a>
