--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
         <div id="myDropdown" class="dropdown-content">
             <li id = "video"><!--<a href="url">Video</a>--></li>
             <li id = "photo"><a href="pages/photography.html">Photography</a></li>
-            <li id = "uxui"><!--<a href="pages/uxui.html">UX/UI</a>--></li>
-            <li id = "wd"><!--<a href="pages/webdesign.html">Web Design</a>--></li>
+            <li id = "wd"><!--<a href="webdesign.html">Web Design</a>--></li>
+            <li id = "graphics"><a href="pages/graphics.html">Graphics</a></li>
             <li id = "projects"><!--<a href="projects.html">Projects</a>--></li>
             <li id = "logo"><!--<a href="url">Logo</a>--></li>
             <li id = "type"><!--<a href="url">Type</a>--></li>
