--- a/pages/graphics.html
+++ b/pages/graphics.html
@@ -1,5 +1,5 @@
 <!--PORTFOLIO PAGE - Black on White - HTML-->
-<!--PORTFOLIO PAGE - PHOTOGRAPHY - HTML-->
+<!--PORTFOLIO PAGE - GRAPHICS - HTML-->
 <!DOCTYPE html>
 <head>
     <title>Janine Fernandez Portfolio 2018</title>
@@ -31,7 +31,7 @@
 <div id="bodywrapper">
     <!--GRID CONTAINER-->
     <div class = "gridwrapper">
-        <div class="box header_welcome">photography</div>
+        <div class="box header_welcome">graphics</div>
         <div class="box header_pagename">
             <a href="../index.html"><p>Janine B. Fernandez | <img src="../images/j.ix-logo.png" alt="Janine Fernandez Logo"> | Porfolio</p></a>
             <!--Social media accounts-->
@@ -42,19 +42,19 @@
         </div>
         </div><!--gridwrapper ends-->
 <!--GALLERY BEGINS-->
-<h2 class="page_title">Janine's Photos</h2>
+<h2 class="page_title">Janine's Designs</h2>
 
 <div class="row">
     <div class="column">
-        <img src="https://farm5.staticflickr.com/4846/31850406848_a613e5615f_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+        <img src="https://farm5.staticflickr.com/4840/46074063542_0c206014fb_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
     </div>
     <div class="column">
-        <img src="https://farm5.staticflickr.com/4803/31850428788_0767f7ecf2_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(2)" class="hover-shadow cursor">
+        <img src="https://farm5.staticflickr.com/4811/46074063502_0f42b679e8_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(2)" class="hover-shadow cursor">
     </div>
     <div class="column">
-        <img src="https://farm2.staticflickr.com/1909/45671424462_d6175a844e_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(3)" class="hover-shadow cursor">
+        <img src="https://farm5.staticflickr.com/4864/45400146264_252120e2d0_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(3)" class="hover-shadow cursor">
     </div>
-    <div class="column">
+    <!--<div class="column">
         <img src="https://farm2.staticflickr.com/1971/31850376608_dfb41f7a7e_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
     </div>
     <div class="column">
@@ -63,9 +63,9 @@
     <div class="column">
         <img src="https://farm5.staticflickr.com/4813/45722139761_a5c9586623_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(6)" class="hover-shadow cursor">
     </div>
-    <!--<div class="column">
+    <div class="column">
         <img src="https://farm5.staticflickr.com/4813/45722139761_a5c9586623_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(7)" class="hover-shadow cursor">
-    </div>-->
+    </div>
     <div class="column">
         <img src="https://farm5.staticflickr.com/4853/44997209154_d0abb0ed2f_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(8)" class="hover-shadow cursor">
     </div>
@@ -74,7 +74,7 @@
     </div>
     <div class="column">
         <img src="https://farm2.staticflickr.com/1969/44807998995_b378d1db08_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(10)" class="hover-shadow cursor">
-    </div>
+    </div>-->
 </div>
 
 <div id="myModal" class="modal">
@@ -82,20 +82,20 @@
   <div class="modal-content">
 
     <div class="mySlides">
-      <div class="numbertext">Over the Fire</div>
-      <img src="https://farm5.staticflickr.com/4846/31850406848_ac0552d1c4_o_d.jpg" style="width:100%">
+      <div class="numbertext">FREE</div>
+      <img src="https://farm5.staticflickr.com/4840/46074063542_0c206014fb_b_d.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-        <div class="numbertext">Pavillion</div>
-        <img src="https://farm5.staticflickr.com/4803/31850428788_307982a4f5_o_d.jpg" style="width:100%">
+        <div class="numbertext">Zodiac Signs</div>
+        <img src="https://farm5.staticflickr.com/4811/46074063502_0f42b679e8_b_d.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
         <div class="numbertext">San Diego Sunset</div>
-        <img src="https://farm2.staticflickr.com/1909/45671424462_6afe2c2be4_o_d.jpg" style="width:100%">
+        <img src="https://farm5.staticflickr.com/4864/45400146264_252120e2d0_b_d.jpg" style="width:100%">
     </div>
-
+<!---
     <div class="mySlides">
         <div class="numbertext">Shelter Island 1</div>
         <img src="https://farm2.staticflickr.com/1971/31850376608_9a389154c3_o_d.jpg" style="width:100%">
@@ -111,12 +111,12 @@
         <img src="https://farm5.staticflickr.com/4813/45722139761_8f50298324_o_d.jpg" style="width:100%">
     </div>
 
-    <!--
+
     <div class="mySlides">
             <div class="numbertext">Into the City</div>
             <img src="https://farm5.staticflickr.com/4813/45722139761_8f50298324_o_d.jpg" style="width:100%">
     </div>
--->
+
     <div class="mySlides">
       <div class="numbertext">Balboa Night</div>
       <img src="https://farm5.staticflickr.com/4853/44997209154_7252ff3c38_o_d.jpg" style="width:100%">
@@ -131,7 +131,7 @@
       <div class="numbertext">Bridge Point</div>
       <img src="https://farm2.staticflickr.com/1969/44807998995_ac1996a13e_o_d.jpg" style="width:100%">
     </div>
-    
+-->
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
     <a class="next" onclick="plusSlides(1)">&#10095;</a>
 
