--- a/pages/graphics.html
+++ b/pages/graphics.html
@@ -94,17 +94,17 @@
     </div>
 
     <div class="mySlides">
-        <div class="numbertext">San Diego Sunset</div>
+        <div class="numbertext">Give & Take</div>
         <img src="https://farm5.staticflickr.com/4864/45400146264_252120e2d0_b_d.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-        <div class="numbertext">Shelter Island 1</div>
+        <div class="numbertext">In Balance 1</div>
         <img src="https://farm8.staticflickr.com/7911/31481395757_44bb401feb_b_d.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-        <div class="numbertext">Shelter Island 2</div>
+        <div class="numbertext">In Balance 2</div>
         <img src="https://farm5.staticflickr.com/4876/45508409145_cac42313b8_b_d.jpg" style="width:100%">
     </div>
 <!--
@@ -152,7 +152,7 @@
         <div id="myDropdown" class="dropdown-content">
             <li id = "video"><!--<a href="url">Video</a>--></li>
             <li id = "photo"><a href="photography.html">Photography</a></li>
-            <li id = "wd"><!--<a href="webdesign.html">Web Design</a>--></li>
+            <li id = "wd"><a href="webdesign.html">Web Design</a></li>
             <li id = "graphics"><a href="graphics.html">Graphics</a></li>
             <li id = "projects"><!--<a href="projects.html">Projects</a>--></li>
             <li id = "logo"><!--<a href="url">Logo</a>--></li>
