--- a/pages/photography.html
+++ b/pages/photography.html
@@ -152,7 +152,7 @@
         <div id="myDropdown" class="dropdown-content">
             <li id = "video"><!--<a href="url">Video</a>--></li>
             <li id = "photo"><a href="photography.html">Photography</a></li>
-            <li id = "wd"><!--<a href="webdesign.html">Web Design</a>--></li>
+            <li id = "wd"><a href="webdesign.html">Web Design</a></li>
             <li id = "graphics"><a href="graphics.html">Graphics</a></li>
             <li id = "projects"><!--<a href="projects.html">Projects</a>--></li>
             <li id = "logo"><!--<a href="url">Logo</a>--></li>
