--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
 <!--PORTFOLIO PAGE - Black on White - HTML-->
 <!DOCTYPE html>
 <head>
+    <!--GOOGLE ANALYTICS START-->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-132225675-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-132225675-1');
+</script>
+
+    <!--GOOGLE ANALYTICS ENDS-->
     <title>Janine Fernandez Portfolio 2018</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
