--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 
   gtag('config', 'UA-132225675-1');
 </script>
-
     <!--GOOGLE ANALYTICS ENDS-->
+    <!--GOOGLE WEBMASTER TOOL START-->
+    <meta name="google-site-verification" content="ZT-j7V2ZNz3gB6tCpHdm-MlS_cqu8zFKQktu_RtQhDQ" />
+    <!--GOOGLE WEBMASTER TOL ENDS-->
     <title>Janine Fernandez Portfolio 2018</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
