--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     </div>
                       
                 <div class = "gridwrapper_info">
-                    <div class="box mytitle">designer & developer
+                    <div class="box mytitle">designer & developer, proj manager
                         </div>
                     <div class="box myname">Janine B. Fernandez
                         </div>
@@ -79,24 +79,28 @@
 <div id="aboutme_des">
         <p id="header_contact">ABOUT ME</p>
         <p id="aboutme_content">
-            <br>Learning is never ending. Once you put your heart into it, anything can be accomplished. 
-            <br>Always be passionate about what you love doing. Learn during the process and progress with time.
+            <br> I grew up drawing on dirt in the province. As I move to a more modern community,
+            <br> my interest in technology blossomed. Art and the digital world colliding is a field
+            <br> with endless outcomes. I aim to surround myself in an environment that will foster 
+            <br> my interest and growth. As I learn new things, I strive to use my knowledge and
+            <br> skills in creating something new or better yet, build on foundation. 
+            <br>
+            <br><a href="https://www.dropbox.com/s/ueqdqvblpoalimy/Janine_Fernandez_Resume_011319.pdf?dl=0" target="_blank" style="font-weight:bold;">RESUME</a>
             <br>
             <br>
-            <br>
-            <br><a href="https://www.dropbox.com/s/25f7zjfgmu2pwn1/Janine_Fernandez_Resume_121518.pdf?dl=0" target="_blank" style="font-weight:bold;">RESUME</a>
         </p>
         <p id="close_about">X</p>
 </div>
 <div id="contactme_des">
         <p id="header_contact">CONTACT ME</p>
         <p id="contactme_content">
+            <br> Please contact me directly at: 
             <br>janinebfernandez@gmail.com
-            <br>
-            <br>
+            <br> I'd would love to hear from you!
             <br>
             <br><a href="https://www.linkedin.com/in/janinebfernandez" target="_blank" style="font-weight:bold;">LinkedIn</a>
-
+            <br>
+            <br>
         </p>
         <p id="close_contact">X</p>
 </div>
@@ -113,7 +117,7 @@
             <li id = "photo"><a href="pages/photography.html">Photography</a></li>
             <li id = "wd"><a href="pages/webdesign.html">Web Design</a></li>
             <li id = "graphics"><a href="pages/graphics.html">Graphics</a></li>
-            <li id = "projects"><!--<a href="projects.html">Projects</a>--></li>
+            <li id = "projects"><a href="pages/projects.html">Projects</a></li>
             <li id = "logo"><!--<a href="url">Logo</a>--></li>
             <li id = "type"><!--<a href="url">Type</a>--></li>
             <li id = "animate"><!--<a href="url">Animate</a>--></li>
