--- a/pages/photography.html
+++ b/pages/photography.html
@@ -45,7 +45,9 @@
         </div><!--gridwrapper ends-->
 <!--GALLERY BEGINS-->
 <h2 class="page_title">Janine's Photos</h2>
-
+<!--<h3 class="section_title">Night Photography</h3>
+<div class="description"><p>There is something about it that is so peaceful. My curiosity is always at its peak when I hear the shutter go off and you wait for the exposure shot to show you the outcome.</p>
+</div>-->
 <div class="row">
     <div class="column">
         <img src="https://farm5.staticflickr.com/4846/31850406848_a613e5615f_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -65,17 +67,14 @@
     <div class="column">
         <img src="https://farm5.staticflickr.com/4813/45722139761_a5c9586623_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(6)" class="hover-shadow cursor">
     </div>
-    <!--<div class="column">
-        <img src="https://farm5.staticflickr.com/4813/45722139761_a5c9586623_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(7)" class="hover-shadow cursor">
-    </div>-->
     <div class="column">
-        <img src="https://farm5.staticflickr.com/4853/44997209154_d0abb0ed2f_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(8)" class="hover-shadow cursor">
+        <img src="https://farm5.staticflickr.com/4853/44997209154_d0abb0ed2f_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(7)" class="hover-shadow cursor">
     </div>
     <div class="column">
-        <img src="https://farm5.staticflickr.com/4815/31850480948_0baa8037c6_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(9)" class="hover-shadow cursor">
+        <img src="https://farm5.staticflickr.com/4815/31850480948_0baa8037c6_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(8)" class="hover-shadow cursor">
     </div>
     <div class="column">
-        <img src="https://farm2.staticflickr.com/1969/44807998995_b378d1db08_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(10)" class="hover-shadow cursor">
+        <img src="https://farm2.staticflickr.com/1969/44807998995_b378d1db08_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(9)" class="hover-shadow cursor">
     </div>
 </div>
 
@@ -113,12 +112,6 @@
         <img src="https://farm5.staticflickr.com/4813/45722139761_8f50298324_o_d.jpg" style="width:100%">
     </div>
 
-    <!--
-    <div class="mySlides">
-            <div class="numbertext">Into the City</div>
-            <img src="https://farm5.staticflickr.com/4813/45722139761_8f50298324_o_d.jpg" style="width:100%">
-    </div>
--->
     <div class="mySlides">
       <div class="numbertext">Balboa Night</div>
       <img src="https://farm5.staticflickr.com/4853/44997209154_7252ff3c38_o_d.jpg" style="width:100%">
@@ -154,7 +147,7 @@
             <li id = "photo"><a href="photography.html">Photography</a></li>
             <li id = "wd"><a href="webdesign.html">Web Design</a></li>
             <li id = "graphics"><a href="graphics.html">Graphics</a></li>
-            <li id = "projects"><!--<a href="projects.html">Projects</a>--></li>
+            <li id = "projects"><a href="projects.html">Projects</a></li>
             <li id = "logo"><!--<a href="url">Logo</a>--></li>
             <li id = "type"><!--<a href="url">Type</a>--></li>
             <li id = "animate"><!--<a href="url">Animate</a>--></li>
