--- a/pages/projects.html
+++ b/pages/projects.html
@@ -35,10 +35,10 @@
             <a href="../index.html"><p>Janine B. Fernandez | <img src="../images/j.ix-logo.png" alt="Janine Fernandez Logo"> | Porfolio</p></a>
             <!--Social media accounts-->
             <div class = "socialmedia">
-                <a href="https://www.linkedin.com/in/janinebfernandez" target = "_blank"><img src="images/linkedin-icon.png" alt="LinkedIn"></a>
-                <a href="https://www.youtube.com/channel/UCWjmkdK2poOYL6IYrYUskwQ/featured?disable_polymer=1" target = "_blank"><img src="images/youtube-icon.png" alt="Flickr"></a>
-                <a href="https://www.instagram.com/j.ix_redefine9" target = "_blank"><img src="images/instagram-icon.png" alt="Instagram"></a>
-                <a href="https://www.flickr.com/photos/janinebfernandez/" target = "_blank"><img src="images/flickr-icon.png" alt="Flickr"></a>
+                <a href="https://www.linkedin.com/in/janinebfernandez" target = "_blank"><img src="../images/linkedin-icon.png" alt="LinkedIn"></a>
+                <a href="https://www.youtube.com/channel/UCWjmkdK2poOYL6IYrYUskwQ/featured?disable_polymer=1" target = "_blank"><img src="../images/youtube-icon.png" alt="Flickr"></a>
+                <a href="https://www.instagram.com/j.ix_redefine9" target = "_blank"><img src="../images/instagram-icon.png" alt="Instagram"></a>
+                <a href="https://www.flickr.com/photos/janinebfernandez/" target = "_blank"><img src="../images/flickr-icon.png" alt="Flickr"></a>
             </div>
         </div>
         </div><!--gridwrapper ends-->
@@ -56,7 +56,7 @@
         <div id="myDropdown" class="dropdown-content">
             <li id = "video"><!--<a href="url">Video</a>--></li>
             <li id = "photo"><a href="photography.html">Photography</a></li>
-            <li id = "wd"><!--<a href="webdesign.html">Web Design</a>--></li>
+            <li id = "wd"><a href="webdesign.html">Web Design</a></li>
             <li id = "graphics"><a href="graphics.html">Graphics</a></li>
             <li id = "projects"><a href="projects.html">Projects</a></li>
             <li id = "logo"><!--<a href="url">Logo</a>--></li>
