--- a/pages/graphics.html
+++ b/pages/graphics.html
@@ -154,7 +154,7 @@
             <li id = "photo"><a href="photography.html">Photography</a></li>
             <li id = "wd"><a href="webdesign.html">Web Design</a></li>
             <li id = "graphics"><a href="graphics.html">Graphics</a></li>
-            <li id = "projects"><!--<a href="projects.html">Projects</a>--></li>
+            <li id = "projects"><a href="projects.html">Projects</a></li>
             <li id = "logo"><!--<a href="url">Logo</a>--></li>
             <li id = "type"><!--<a href="url">Type</a>--></li>
             <li id = "animate"><!--<a href="url">Animate</a>--></li>
