Link-icon update
home button updated

--- a/pages/photography.html
+++ b/pages/photography.html
@@ -31,7 +31,7 @@
 <div id="bodywrapper">
     <!--GRID CONTAINER-->
     <div class = "gridwrapper">
-        <div class="box header_welcome">photography</div>
+        <div class="box header_welcome socialmedia"><a href="../index.html" target = ""><img src="../images/home-icon.png" alt="j.ix Home"></a></div>
         <div class="box header_pagename">
             <a href="../index.html"><p>Janine B. Fernandez | <img src="../images/j.ix-logo.png" alt="Janine Fernandez Logo"> | Porfolio</p></a>
             <!--Social media accounts-->
@@ -44,7 +44,7 @@
         </div>
         </div><!--gridwrapper ends-->
 <!--GALLERY BEGINS-->
-<h2 class="page_title">Janine's Photos</h2>
+<h2 class="page_title">Photography</h2>
 <!--<h3 class="section_title">Night Photography</h3>
 <div class="description"><p>There is something about it that is so peaceful. My curiosity is always at its peak when I hear the shutter go off and you wait for the exposure shot to show you the outcome.</p>
 </div>-->
