--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     </div>
                       
                 <div class = "gridwrapper_info">
-                    <div class="box mytitle">designer & developer, project manager
+                    <div class="box mytitle">designer & developer <br>project manager
                         </div>
                     <div class="box myname">Janine B. Fernandez
                         </div>
