--- a/pages/graphics.html
+++ b/pages/graphics.html
@@ -31,7 +31,7 @@
 <div id="bodywrapper">
     <!--GRID CONTAINER-->
     <div class = "gridwrapper">
-        <div class="box header_welcome">graphics</div>
+        <div class="box header_welcome socialmedia"><a href="../index.html" target = ""><img src="../images/home-icon.png" alt="j.ix Home"></a></div>
         <div class="box header_pagename">
             <a href="../index.html"><p>Janine B. Fernandez | <img src="../images/j.ix-logo.png" alt="Janine Fernandez Logo"> | Porfolio</p></a>
             <!--Social media accounts-->
@@ -44,7 +44,7 @@
         </div>
         </div><!--gridwrapper ends-->
 <!--GALLERY BEGINS-->
-<h2 class="page_title">Janine's Designs</h2>
+<h2 class="page_title">Graphics</h2>
 
 <div class="row">
     <div class="column">
