--- a/pages/projects.html
+++ b/pages/projects.html
@@ -33,7 +33,7 @@
 <div id="bodywrapper">
     <!--GRID CONTAINER-->
     <div class = "gridwrapper">
-        <div class="box header_welcome">projects</div>
+        <div class="box header_welcome socialmedia"><a href="../index.html" target = ""><img src="../images/home-icon.png" alt="j.ix Home"></a></div>
         <div class="box header_pagename">
             <a href="../index.html"><p>Janine B. Fernandez | <img src="../images/j.ix-logo.png" alt="Janine Fernandez Logo"> | Porfolio</p></a>
             <!--Social media accounts-->
@@ -46,6 +46,7 @@
         </div>
         </div><!--gridwrapper ends-->
 <!--CONTENT BEGINS-->
+<h2 class="page_title">Projects</h2>
 <div id="project_container"></div>
 <!--POP UP-->
 <a class="trigger_popup_fricc"><img id="car_icon" src="../images/car_meet/car-icon.png"></a>
