--- a/pages/graphics.html
+++ b/pages/graphics.html
@@ -31,15 +31,15 @@
 <div id="bodywrapper">
     <!--GRID CONTAINER-->
     <div class = "gridwrapper">
-        <div class="box header_welcome socialmedia"><a href="../index.html" target = ""><img src="../images/home-icon.png" alt="j.ix Home"></a></div>
+        <div class="box header_welcome socialmedia"><a href="../index.html" target = ""><img src="../images/icons/home-icon.png" alt="j.ix Home"></a></div>
         <div class="box header_pagename">
             <a href="../index.html"><p>Janine B. Fernandez | <img src="../images/j.ix-logo.png" alt="Janine Fernandez Logo"> | Porfolio</p></a>
             <!--Social media accounts-->
             <div class = "socialmedia">
-                <a href="https://www.linkedin.com/in/janinebfernandez" target = "_blank"><img src="../images/linkedin-icon.png" alt="LinkedIn"></a>
-                <a href="https://www.youtube.com/channel/UCWjmkdK2poOYL6IYrYUskwQ/featured?disable_polymer=1" target = "_blank"><img src="../images/youtube-icon.png" alt="Flickr"></a>
-                <a href="https://www.instagram.com/j.ix_redefine9" target = "_blank"><img src="../images/instagram-icon.png" alt="Instagram"></a>
-                <a href="https://www.flickr.com/photos/janinebfernandez/" target = "_blank"><img src="../images/flickr-icon.png" alt="Flickr"></a>
+                <a href="https://www.linkedin.com/in/janinebfernandez" target = "_blank"><img src="../images/icons/linkedin-icon.png" alt="LinkedIn"></a>
+                <a href="https://www.youtube.com/channel/UCWjmkdK2poOYL6IYrYUskwQ/featured?disable_polymer=1" target = "_blank"><img src="../images/icons/youtube-icon.png" alt="Flickr"></a>
+                <a href="https://www.instagram.com/j.ix_redefine9" target = "_blank"><img src="../images/icons/instagram-icon.png" alt="Instagram"></a>
+                <a href="https://www.flickr.com/photos/janinebfernandez/" target = "_blank"><img src="../images/icons/flickr-icon.png" alt="Flickr"></a>
             </div>
         </div>
         </div><!--gridwrapper ends-->
@@ -85,27 +85,27 @@
 
     <div class="mySlides">
       <div class="numbertext">FREE</div>
-      <img src="https://farm5.staticflickr.com/4840/46074063542_0c206014fb_b_d.jpg" style="width:100%">
+      <img src="../images/graphics/free.jpg" style="width:80%">
     </div>
 
     <div class="mySlides">
         <div class="numbertext">Zodiac Signs</div>
-        <img src="https://farm5.staticflickr.com/4811/46074063502_0f42b679e8_b_d.jpg" style="width:100%">
+        <img src="../images/graphics/zodiacs.jpg" style="width:80%">
     </div>
 
     <div class="mySlides">
         <div class="numbertext">Give & Take</div>
-        <img src="https://farm5.staticflickr.com/4864/45400146264_252120e2d0_b_d.jpg" style="width:100%">
+        <img src="../images/graphics/giveandtake.jpg" style="width:80%">
     </div>
 
     <div class="mySlides">
         <div class="numbertext">In Balance 1</div>
-        <img src="https://farm8.staticflickr.com/7911/31481395757_44bb401feb_b_d.jpg" style="width:100%">
+        <img src="../images/graphics/in-balance-green.jpg" style="width:80%">
     </div>
 
     <div class="mySlides">
         <div class="numbertext">In Balance 2</div>
-        <img src="https://farm5.staticflickr.com/4876/45508409145_cac42313b8_b_d.jpg" style="width:100%">
+        <img src="../images/graphics/in-balance-duplicate.jpg" style="width:80%">
     </div>
 <!--
     <div class="mySlides">
