--- a/pages/webdesign.html
+++ b/pages/webdesign.html
@@ -31,15 +31,15 @@
 <div id="bodywrapper">
     <!--GRID CONTAINER-->
     <div class = "gridwrapper">
-        <div class="box header_welcome socialmedia"><a href="../index.html" target = ""><img src="../images/home-icon.png" alt="j.ix Home"></a></div>
+        <div class="box header_welcome socialmedia"><a href="../index.html" target = ""><img src="../images/icons/home-icon.png" alt="j.ix Home"></a></div>
         <div class="box header_pagename">
             <a href="../index.html"><p>Janine B. Fernandez | <img src="../images/j.ix-logo.png" alt="Janine Fernandez Logo"> | Porfolio</p></a>
             <!--Social media accounts-->
             <div class = "socialmedia">
-                <a href="https://www.linkedin.com/in/janinebfernandez" target = "_blank"><img src="../images/linkedin-icon.png" alt="LinkedIn"></a>
-                <a href="https://www.youtube.com/channel/UCWjmkdK2poOYL6IYrYUskwQ/featured?disable_polymer=1" target = "_blank"><img src="../images/youtube-icon.png" alt="Flickr"></a>
-                <a href="https://www.instagram.com/j.ix_redefine9" target = "_blank"><img src="../images/instagram-icon.png" alt="Instagram"></a>
-                <a href="https://www.flickr.com/photos/janinebfernandez/" target = "_blank"><img src="../images/flickr-icon.png" alt="Flickr"></a>
+                <a href="https://www.linkedin.com/in/janinebfernandez" target = "_blank"><img src="../images/icons/linkedin-icon.png" alt="LinkedIn"></a>
+                <a href="https://www.youtube.com/channel/UCWjmkdK2poOYL6IYrYUskwQ/featured?disable_polymer=1" target = "_blank"><img src="../images/icons/youtube-icon.png" alt="Flickr"></a>
+                <a href="https://www.instagram.com/j.ix_redefine9" target = "_blank"><img src="../images/icons/instagram-icon.png" alt="Instagram"></a>
+                <a href="https://www.flickr.com/photos/janinebfernandez/" target = "_blank"><img src="../images/icons/flickr-icon.png" alt="Flickr"></a>
             </div>
         </div>
         </div><!--gridwrapper ends-->
@@ -85,28 +85,28 @@
   <div class="modal-content">
 
     <div class="mySlides">
-      <div class="numbertext">Indulge in Music</div>
-      <img src="https://farm8.staticflickr.com/7842/45857134944_5ab132a1a6_b_d.jpg" style="width:100%">
+      <div class="numbertext">Indulge</div>
+      <img src="../images/web_design/uxui-template-festival-friends-color.jpg" style="width:80%">
     </div>
 
     <div class="mySlides">
         <div class="numbertext">Miramar Lake</div>
-        <img src="https://farm5.staticflickr.com/4900/46529127052_c87bf1df86_b_d.jpg" style="width:100%">
+        <img src="../images/web_design/uxui-template-miramar-lake.jpg" style="width:80%">
     </div>
 
     <div class="mySlides">
         <div class="numbertext">Daily Quotes</div>
-        <img src="https://farm5.staticflickr.com/4876/46581393941_8421d2c2f4_b_d.jpg" style="width:100%">
+        <img src="../images/web_design/uxui-template-daily-quotes.jpg" style="width:80%">
     </div>
 
     <div class="mySlides">
         <div class="numbertext">Cali Side</div>
-        <img src="https://farm8.staticflickr.com/7891/32707438858_ca9acf557d_b_d.jpg" style="width:100%">
+        <img src="../images/web_design/uxui-template-cali-side.jpg" style="width:80%">
     </div>
 
     <div class="mySlides">
         <div class="numbertext">Music Alliance</div>
-        <img src="https://farm5.staticflickr.com/4901/44763344980_66a6b5c668_b_d.jpg" style="width:100%">
+        <img src="../images/web_design/uxui-template-music-alliance.jpg" style="width:80%">
     </div>
 
     <!--<div class="mySlides">
